<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>mc.dragons</groupId>
	<artifactId>dragons-core</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>dragons-core</name>
	<description>Core</description>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>12</maven.compiler.source>
		<maven.compiler.target>12</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
		</repository>
		<repository>
			<id>nms</id>
			<url>https://repo.codemc.io/repository/nms/</url>
		</repository>
		<repository>
			<id>CodeMC</id>
			<url>https://repo.codemc.org/repository/maven-public</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>mc.dragons</groupId>
			<artifactId>dragons-paper-utils</artifactId>
			<version>0.0.1-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.16.5-R0.1-SNAPSHOT</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bukkit</groupId>
			<artifactId>craftbukkit</artifactId>
			<version>1.16.5-R0.1-20210405.222457-11</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>4.6.0</version>
		</dependency>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.12.0</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>net.minecrell</groupId>
			<artifactId>terminalconsoleappender</artifactId>
			<version>1.2.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.github.bananapuncher714</groupId>
			<artifactId>NBTEditor</artifactId>
			<version>7.16</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>
